--- a/View/includes/sidebar.html
+++ b/View/includes/sidebar.html
@@ -1,95 +1,94 @@
-<aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
-    <div class="sidenav-header">
-      <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" 
-         href="https://appseed.us/product/material-dashboard/flask/" target="_blank">
-        <img src="/static/assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">Oficina.py</span>
-      </a>
+<aside
+  class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark"
+  id="sidenav-main">
+  <div class="sidenav-header">
+    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+      aria-hidden="true" id="iconSidenav"></i>
+    <a class="navbar-brand m-0" href="https://appseed.us/product/material-dashboard/flask/" target="_blank">
+      <img src="/static/assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
+      <span class="ms-1 font-weight-bold text-white">Oficina.py</span>
+    </a>
+  </div>
+  <hr class="horizontal light mt-s0 mb-2">
+  <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}" href="/index">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">dashboard</i>
+          </div>
+          <span class="nav-link-text ms-1">Dashboard</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'tables' in segment %} active bg-gradient-primary {% endif %}"
+          href="/ordem">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">O.S.</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'billing' in segment %} active bg-gradient-primary {% endif %}"
+          href="/cliente">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Clientes</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}"
+          href="/veiculo">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Veiculos</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}"
+          href="/produto">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Produtos</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}"
+          href="/usuario">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Usuarios</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'profile' in segment %} active bg-gradient-primary {% endif %}"
+          href="/oficina">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">person</i>
+          </div>
+          <span class="nav-link-text ms-1">Oficina</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="{{ url_for('index.logout') }}">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">directions_run</i>
+          </div>
+          <span class="nav-link-text ms-1">Sair</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="sidenav-footer position-absolute w-100 bottom-0 ">
+    <div class="mx-3">
+      <a class="btn bg-gradient-primary mt-4 w-100" target="_blank" href="https://www.google.com.br/"
+        type="button">Suporte</a>
     </div>
-    <hr class="horizontal light mt-s0 mb-2">
-    <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/index">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">dashboard</i>
-            </div>
-            <span class="nav-link-text ms-1">Dashboard</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'tables' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/ordem">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-            <span class="nav-link-text ms-1">O.S.</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'billing' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/cliente">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-            <span class="nav-link-text ms-1">Clientes</span>
-          </a>
-        </li>
-               
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/carro">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-            <span class="nav-link-text ms-1">Carros</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/produto">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-            <span class="nav-link-text ms-1">Produtos</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'notifications' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/usuario">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-            <span class="nav-link-text ms-1">Usuarios</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'profile' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/oficina">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">person</i>
-            </div>
-            <span class="nav-link-text ms-1">Oficina</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white " href="{{ url_for('index.logout') }}">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">directions_run</i>
-            </div>
-            <span class="nav-link-text ms-1">Sair</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-      <div class="mx-3">
-        <a class="btn bg-gradient-primary mt-4 w-100" 
-           target="_blank" 
-           href="https://www.google.com.br/" type="button">Suporte</a>
-      </div>
-    </div>
-  </aside>
-  
+  </div>
+</aside>
